# drone

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  config.json  connect.js  drone-desktop.sln  server.js  sync-all.sh  sync-config.sh  sync-proto.sh  sync-sensors.sh  sync-src.sh  sync.sh  tcpserver.js  y_rot.csv
Drone/: Drone.cpp  Drone.vcxproj  Drone.vcxproj.filters  Input.cpp  Input.h  ReadMe.txt  main.cpp
controller/: .gitignore  drone-desktop.sln
controller/Drone/: Drone.vcxproj.filters  Input.h  ReadMe.txt  stdafx.cpp  stdafx.h
controller/drone-controller/: Connection.cs
controller/drone-controller-osx/: Program.cs
controller/drone-controller-osx/Properties/: AssemblyInfo.cs
controller/drone-controller-windows/: Controller.cs  Program.cs  drone-controller-windows.csproj  packages.config
copter/: .gitignore  Cargo.toml  Config.toml  README.md  build.rs  config.json  mag.csv  measurements.csv  run-release.sh  run.sh  sensor_fusion  sensors.toml  sync.sh
copter/config/: Cargo.toml
copter/config/src/: lib.rs
copter/configuration/: config_default.toml
copter/configurations/: Cargo.toml
copter/configurations/src/: calibrations.rs  config.rs  lib.rs  main.rs
copter/debug/: Cargo.toml  app.js  index.html
copter/debug/src/: lib.rs
copter/ekf_matlab/: ekf_derivation  ekf_derivation.m  ekf_derivation.m~  helper_functions.m~  transition_jacobian.txt
copter/logger/: Cargo.toml
copter/logger/src/: flight_logger.rs  lib.rs  module_logger.rs
copter/matlab/: 15000data.mat  AllanVariance3.m  PlotEllipsoid.asv  PlotEllipsoid.m  Untitled7.m  calibrate_mag.m  ellipsoid_fit.m  ellipsoid_fit_mag.mat  good_data.mat  location.csv
copter/protos/: Cargo.toml  build.rs
copter/protos/protos/: controller_input.proto  position.proto
copter/protos/src/: lib.rs  main.rs
copter/scripts/: install_development_environment_dependencies.sh  install_raspberry_pi_dependencies.sh
copter/sensors/: Cargo.toml
copter/sensors/src/: barometer.rs  lib.rs  main.rs
copter/src/: config.rs  connection.rs  main.rs  motor.rs
copter/src/flight/: altitude.rs  attitude.rs  imu.rs  kalman.rs  mod.rs  navigation.rs  pid.rs
copter/src/hardware/: barometer.rs  battery.rs  gps.rs  imu.rs  mock.rs  mod.rs  motors.rs  sensors.rs  system_sensors.rs
copter/src/networking/: http_connection.rs  mod.rs  p2p_connection.rs
copter/src/sensor_manager/: lib.rs  mod.rs  sensors.rs
copter/sync/: sync-config.sh  sync-debug.sh  sync-proto.sh  sync-sensors.sh  sync-src.sh
copter/visualizer/: Cargo.toml  Readme.md
copter/visualizer/src/: main.rs
debug/: app.js  index.html
drone-controller/: Connection.cs  drone-controller.projitems  drone-controller.shproj
drone-controller-osx/: drone-controller-osx.csproj
drone-controller-windows/: Controller.cs  Program.cs  drone-controller-windows.csproj
drone-controller-windows/Properties/: AssemblyInfo.cs
proto/: controller_input.proto  position.proto  vector3.proto
protos/: Cargo.toml  build.rs
protos/src/: controller_input.rs  lib.rs  position.rs  vector3.rs
schema/: position.capnp
sensors/src/: constants.rs  lib.rs  main.rs
server/: connect.js
server/drone-server/: Cargo.toml
server/drone-server/src/: config.rs  main.rs
src/: config.rs  connection.rs  debug.rs  main.rs  motor.rs  tasker.rs
src/connection/: mod.rs
src/sensors/: Cargo.toml
src/sensors/src/: lib.rs  main.rs
updater/: Cargo.toml  update.sh
updater/src/: main.rs
writeup/: writeup.tex
