[package]
name = "drone"
version = "0.1.0"
authors = ["Thomas Deegan <tadeegan@gmail.com>", "Martin Deegan <mddeegan@gmail.com>"]
build = "build.rs"

[dependencies]
rust-pigpio = "0.2.0"
protobuf = "1.2.2"

[build-dependencies]
protoc-rust = { path = "third_party/rust-protobuf/protoc-rust" }

[[bin]]
name = "drone"
path = "src/main.rs"

[features]
rpi = []
