[package]
name = "drone"
version = "0.1.0"
authors = ["Thomas Deegan <tadeegan@gmail.com>", "Martin Deegan <mddeegan@gmail.com>"]
build = "build.rs"

[dependencies]
rust-pigpio = "0.2.0"
time = "0.1"
sensors = {path = "./sensors", version = "0.1.0"}
debug_server = {path = "./debug", version = "0.1.0"}
serde_json = "1.0.2"
serde = "1.0.8"
serde_derive = "1.0.8"
protos = {path = "./protos"}
protobuf = "1.2.2"

[[bin]]
name = "drone"
path = "src/main.rs"

[features]
rpi = []

#Hello