[package]
name = "drone"
version = "0.1.0"
authors = ["Thomas Deegan <tadeegan@gmail.com>", "Martin Deegan <mddeegan@gmail.com>"]

[dependencies]
rust-pigpio = "0.2.0"
time = "0.1"
debug_server = {path = "./debug", version = "0.1.0"}
config = { path = "./config" }
i2csensors = "0.1.*"
i2cdev-bmp180 = "0.1.*"
i2cdev-bmp280 = "0.1.*"
i2cdev-l3gd20 = "0.1.*"
i2cdev-lsm303d = "0.1.*"
i2cdev-lsm9ds0 = "0.1.*"
pca9685 = "0.1.0"
ads111x = "0.1.0"
i2cdev = "0.3.1"
unbounded-gpsd = "0.4.2"
wifilocation = { path = "./third_party/wifilocation" }
typenum = "1.7.0"
mqtt-protocol = "0.4"
configurations = { path = "./configurations" }
logger = { path = "./logger" }
rulinalg = "0.4.2"


[[bin]]
name = "drone"
path = "src/main.rs"

[features]
rpi = []

[profile.dev]
opt-level = 0
debug = true
